--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     
 <nav>
-    <img src="./media/logo.aulab.svg" alt="logo aulab">
-    <ul>
-        <li><a href="">CORSI</a></li>
-        <li><a href="">AULAB</a></li>
-        <li><a href="">GUIDE</a></li>
-        <li><a href="">BLOG</a></li>
-        <li><a href="">EVENTI</a></li>
-        <li><a href="">LAVORA CON NOI</a></li>
-        <li><a href="">SEI UN'AZIENDA?</a></li>
+    <img src="./media/logo.aulab.svg" alt="logo aulab" class="logoAulab">
+    <ul class="listlink">
+        <li><a class="link" href="">CORSI</a></li>
+        <li><a class="link" href="">AULAB</a></li>
+        <li><a class="link" href="">GUIDE</a></li>
+        <li><a class="link" href="">BLOG</a></li>
+        <li><a class="link" href="">EVENTI</a></li>
+        <li><a class="link" href="">LAVORA CON NOI</a></li>
+        <li><a class="link" href="">SEI UN'AZIENDA?</a></li>
     </ul>
 </nav>
 
     <header>
         <h1>Aulab</h1>
-        <a href="">Home -</a>
+        <a class="linkhome" href="">Home -</a>
     </header>
 
     <!-- section articoli -->
@@ -36,7 +41,7 @@
             <p>9 OTTOBRE 2024</p>
             <h4>Come diventare Data Analyst: la roadmap da seguire</h4>
             <p>La figura del Data Analyst è diventata una delle più ricercate nel mondo aziendale degli ultimi anni. In un contesto in cui i dati sono il nuovo “petrolio” dell’economia digitale, le aziende si trovano a doverli analizzare e interpretare per ottenere un vantaggio competitivo.</p>
-            <button>Leggi tutto >></button>
+            <button class="buttonArtc">Leggi tutto >></button>
         </article>
         <!-- articolo 2 -->
          <article>
@@ -44,7 +49,7 @@
             <p>30 SETTEMBRE 2024</p>
             <h4>20 task che Chat GPT può svolgere in pochi secondi</h4>
             <p>Negli ultimi anni, l’intelligenza artificiale (AI) ha fatto passi da gigante, diventando uno strumento indispensabile per semplificare e velocizzare moltissime attività quotidiane. Tra i vari strumenti di intelligenza artificiale disponibili, ChatGPT AI si distingue per la sua versatilità e potenza. Ma cos’è ChatGPT e come può essere utilizzato?</p>
-            <button>Leggi tutto >></button>
+            <button class="buttonArtc">Leggi tutto >></button>
          </article>
          <!-- articolo 3 -->
           <article>
@@ -52,7 +57,7 @@
             <p>27 MAGGIO 2024</p>
             <h4>Cos’è la cybersecurity e quali opportunità offre in italia?</h4>
             <p>Nell’era digitale in cui viviamo, la sicurezza informatica, meglio nota come cybersecurity, è diventata una priorità fondamentale per individui, aziende e governi. Ne sentiamo sempre più parlare ma, esattamente, cos’è la cybersecurity e quali opportunità offre in Italia? Ha senso investire in una carriera nella cybersecurity? Scopriamolo insieme!</p>
-            <button>Leggi tutto >></button>
+            <button class="buttonArtc">Leggi tutto >></button>
           </article>
     </main>
 
